Java 8 API compatible
Signed-off-by: Ryan Tatton <rdt17@protonmail.com>